1. Fix donate button sizing on IE11.  2. Add a class for warning text. refs #18744

--- a/src/hg/htdocs/staticStyle/gbStatic.css
+++ b/src/hg/htdocs/staticStyle/gbStatic.css
@@ -34,8 +34,11 @@
     background-color: #7e1f16;
 }
 
-.gbsTextRed {
+/* Text styling */
+
+.gbsWarningText {
     color: red;
+    font-weight: bold;
 }
 
 /* Overall page styling */
@@ -281,7 +284,7 @@ ul.nice-menu ul li a {
 
 .gbDonateButton {
     margin-top: 3px;
-    width: initial;
-    height: initial;
+    width: auto;
+    height: auto;
     padding: 5px 20px;
 }
